--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rusty_sr"
+name = "srgan-rust"
 version = "0.2.0"
-authors = ["James Millard <millard.jn@gmail.com>"]
+authors = ["ktheindifferent"]
 
 [dependencies]
 rand = "0.5"
