--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,10 @@ byteorder = "1"
 indexmap = "1"
 smallvec = "0.6"
 alumina = { version = "0.3.0" }
+log = "0.4"
+env_logger = "0.10"
+indicatif = "0.17"
+chrono = "0.4"
+
+[dev-dependencies]
+tempfile = "3"
