feat(thread_safe_network): introduce thread-safe network architecture for concurrent inference
- Added ThreadSafeNetwork with immutable shared weights and per-thread compute buffers
- Eliminated global mutex bottleneck allowing concurrent inference
- Updated web server, batch processing, and GPU context for thread safety
- Added comprehensive tests, benchmarks, and examples demonstrating concurrency and performance
- Achieved linear scaling with CPU cores and improved memory efficiency
- Replaced UpscalingNetwork usage with ThreadSafeNetwork across codebase
- Documented architecture and benefits in THREAD_SAFE_ARCHITECTURE.md

This major enhancement enables the web server to handle multiple concurrent requests and batch processing to utilize all CPU cores efficiently without locking overhead.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,12 @@ serde_json = "1.0"
 rayon = "1.5"
 lazy_static = "1.4"
 ctrlc = "3.4"
+thread_local = "1.1"
 
 [dev-dependencies]
 tempfile = "3"
+criterion = "0.3"
+
+[[bench]]
+name = "thread_safety_bench"
+harness = false
