feat(model_converter): add PyTorch model import and conversion support
- Implement full parsing of PyTorch model weights from pickle format
- Support various tensor data formats including lists and raw bytes
- Detect model architecture (srgan, srresnet, srgan_full) automatically
- Validate tensor data for NaN/Inf and handle errors gracefully
- Add comprehensive tests for PyTorch model loading and integration
- Add documentation for model converter usage and supported formats
- Update Cargo.toml with new dependencies (serde-pickle, num-bigint, num-traits)
- Enhance README with model converter feature description

This enables importing pre-trained PyTorch models into SRGAN-Rust for inference and further processing.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ rayon = "1.5"
 lazy_static = "1.4"
 ctrlc = "3.4"
 thread_local = "1.1"
+serde-pickle = "1.1"
+num-bigint = "0.4"
+num-traits = "0.2"
 
 [dev-dependencies]
 tempfile = "3"
