feat(model_converter): add comprehensive model conversion support for TensorFlow, ONNX, and Keras
- Introduce dedicated parsers for TensorFlow SavedModel, ONNX, and Keras H5 formats
- Implement weight extraction, model info analysis, and tensor data conversion
- Add common utilities for tensor layout conversion and validation
- Support optional Keras HDF5 parsing with feature flag and fallback simple parser
- Provide placeholder simple parsers for ONNX and TensorFlow without protobuf dependencies
- Add extensive tests for parsers, tensor utilities, and model format detection
- Update Cargo.toml with necessary dependencies and features
- Add build.rs placeholder for protobuf compilation

This enables robust loading and conversion of multiple deep learning model formats into a unified representation for SRGAN processing.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,17 @@ thread_local = "1.1"
 serde-pickle = "1.1"
 num-bigint = "0.4"
 num-traits = "0.2"
+# For TensorFlow SavedModel parsing
+prost = "0.12"
+prost-types = "0.12"
+# For ONNX model parsing  
+protobuf = "3.3"
+# For Keras/H5 model parsing
+hdf5 = { version = "0.8", optional = true }
+
+[features]
+default = []
+keras-support = ["hdf5"]
 
 [dev-dependencies]
 tempfile = "3"
